make it look tighter on mobile; fix c2a button to now show when there is no link

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -25,4 +25,4 @@
 @hover-dim: 0.6;
 
 // BREAKPOINTS
-@viewport-bootstrap-portrain-min: 768px;
+@viewport-portrain-tiny: 400px;
